secondary dontact removed
