# services/MerchantService/MerchantService.Domain/Enums/ContactTypes.cs
@@ -1,7 +1,0 @@
-namespace MerchantService.Domain.Enums;
-
-public enum ContactType
-{
-    Primary = 1,
-    Secondary = 2
-}
